account-chooser: factor out select_account()

https://bugzilla.gnome.org/show_bug.cgi?id=662604